<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:seekarc="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".view.WeatherDisplayScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/weather_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/weather_display_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="@android:color/white"
                    android:textSize="60sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/maximum_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/minimum_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/weathe_icon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/weather_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/place_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/location_ic"
                    android:drawablePadding="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/updated_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/square_bg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/comfort_level"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:layout_marginStart="-80dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" >

                        <app.nishar.weatherpredict.custom.SeekArc
                            android:id="@+id/humidity_progress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            seekarc:arcWidth="5dp"
                            android:padding="10dp"
                            seekarc:max="100"
                            seekarc:progress="0"
                            seekarc:rotation="180"
                            seekarc:startAngle="30"
                            seekarc:sweepAngle="300"
                            seekarc:touchInside="false" />

                        <TextView
                            android:id="@+id/humidity_progress_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@android:color/white"
                            android:textSize="24sp" />
                    </FrameLayout>




                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/feels_like"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/uv_index"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>




            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@color/square_bg"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/wind"
                    android:textStyle="bold"
                    android:textSize="16sp" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <app.nishar.weatherpredict.custom.Windmill
                            android:id="@+id/windmill_big"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            seekarc:windLengthPerent="0.35"
                            seekarc:windmillColors="@android:color/white"
                            android:layout_alignParentStart="true"/>
                        <app.nishar.weatherpredict.custom.Windmill
                            android:id="@+id/windmill_small"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            seekarc:windLengthPerent="0.35"
                            seekarc:windmillColors="@android:color/white"
                            android:layout_alignParentEnd="true"
                            android:layout_alignBottom="@+id/windmill_big"/>
                    </RelativeLayout>




                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/wind_direction"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/wind_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@color/square_bg">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        android:tint="@android:color/white"
                        tools:ignore="ContentDescription" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@android:color/white"
                        android:text="@string/sunrise"/>
                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        />
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@color/square_bg">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        android:tint="@android:color/white"
                        tools:ignore="ContentDescription" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@android:color/white"
                        android:text="@string/sunset"/>
                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        />
                </LinearLayout>
                <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@color/square_bg">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        android:tint="@android:color/white"
                        tools:ignore="ContentDescription" />
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@android:color/white"
                        android:text="@string/pressure"/>
                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/forecast"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                seekarc:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:id="@+id/forecast_list"/>



        </LinearLayout>


        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/wrong_string"
            android:visibility="gone" />

    </RelativeLayout>


</androidx.core.widget.NestedScrollView>